@@ -1,16 +1,12 @@
 package com.capstone.be.config.seed;
 
 import com.capstone.be.config.seed.event.TagSeededEvent;
-import com.capstone.be.domain.entity.DocType;
-import com.capstone.be.domain.entity.Document;
-import com.capstone.be.domain.entity.DocumentTagLink;
-import com.capstone.be.domain.entity.OrganizationProfile;
-import com.capstone.be.domain.entity.Specialization;
-import com.capstone.be.domain.entity.Tag;
-import com.capstone.be.domain.entity.User;
+import com.capstone.be.domain.entity.*;
+import com.capstone.be.domain.entity.DocumentSummarization;
 import com.capstone.be.domain.enums.DocStatus;
 import com.capstone.be.domain.enums.DocVisibility;
 import com.capstone.be.repository.DocTypeRepository;
+import com.capstone.be.repository.DocumentReadHistoryRepository; // Import Repo mới
 import com.capstone.be.repository.DocumentRepository;
 import com.capstone.be.repository.DocumentTagLinkRepository;
 import com.capstone.be.repository.OrganizationProfileRepository;
@@ -24,8 +20,11 @@ import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.Instant;
+import java.util.List;
+
 /**
- * Seeder for Document (dev profile only)
+ * Seeder for Document AND Read History (dev profile only)
  */
 @Profile("dev")
 @Component
@@ -41,62 +40,117 @@ public class DocumentSeeder {
   private final TagRepository tagRepository;
   private final DocumentTagLinkRepository documentTagLinkRepository;
 
+  // Inject thêm Repository này
+  private final DocumentReadHistoryRepository documentReadHistoryRepository;
+
 
   @Transactional
   @EventListener(TagSeededEvent.class)
   public void run() {
-    log.info("\uD83C\uDF31 Start seeding Document");
+    log.info("\uD83C\uDF31 Start seeding Document & History");
 
     if (documentRepository.count() > 0) {
       log.warn("Document already exist → skip seeding.");
       return;
     }
 
-    for (int i = 0; i < 1; i++) {
+    // 1. Tạo 3 document
+    for (int i = 0; i < 3; i++) {
       createDocument(i);
     }
 
+    // 2. Sau khi tạo xong Document thì tạo luôn History
+    seedReadHistory();
   }
 
   private void createDocument(int seed) {
     OrganizationProfile orgProfile =
-        organizationProfileRepository.findByEmail("contact@hust.edu.vn").orElse(null);
+            organizationProfileRepository.findByEmail("contact@hust.edu.vn").orElse(null);
 
     User user = userRepository.findByEmail("reader1@gmail.com").orElse(null);
 
-    DocType docType = docTypeRepository.findAll().getFirst();
-    Specialization spec = specializationRepository.findAll().getFirst();
+    List<DocType> docTypes = docTypeRepository.findAll();
+    DocType docType = docTypes.isEmpty() ? null : docTypes.get(0);
 
-    //if null, #later
+    List<Specialization> specs = specializationRepository.findAll();
+    Specialization spec = specs.isEmpty() ? null : specs.get(0);
+
+    if (docType == null || spec == null) {
+      log.warn("⚠️ DocType or Specialization missing. Skipping document seed " + seed);
+      return;
+    }
+
+    com.capstone.be.domain.entity.DocumentSummarization summarization = DocumentSummarization.builder()
+            .shortSummary("Tóm tắt ngắn gọn cho tài liệu số " + (seed + 1) + ". Nội dung bao quát các khái niệm chính.")
+            .mediumSummary("Tóm tắt vừa phải: Tài liệu này đi sâu vào lý thuyết và thực hành, cung cấp cái nhìn tổng quan về chủ đề với các ví dụ minh họa cụ thể cho tài liệu " + (seed + 1) + ".")
+            .detailedSummary("Tóm tắt chi tiết: Đây là bản phân tích đầy đủ, kết nối các phương pháp cổ điển với các phát triển hiện đại. Tài liệu làm rõ các giả định, điều kiện biên và tính hợp lệ thống kê của các phát hiện được báo cáo, đồng thời đề xuất các tiêu chuẩn có thể tái lập cho tài liệu số " + (seed + 1) + ".")
+            .build();
+
+    String[] titles = {"Sách giáo khoa Toán 11", "Nhập môn Lập trình Java", "Kinh tế vĩ mô căn bản"};
+    String title = seed < titles.length ? titles[seed] : "Tài liệu tham khảo " + seed;
 
     Document document = Document.builder()
-        .id(SeedUtil.generateUUID("doc-" + seed))
-        .title("Sách giáo khoa toán 11")
-        .description("quyển sách này rất hay nhé")
-        .uploader(user)
-        .organization(orgProfile)
-        .visibility(DocVisibility.PUBLIC)
-        .docType(docType)
-        .isPremium(true)
-        .price(100)
-        .thumbnailKey("thumbnail-1.png")
-        .fileKey("file-1.pdf")
-        .pageCount(20)
-        .status(DocStatus.VERIFIED)
-        .specialization(spec)
-        .build();
+            .id(SeedUtil.generateUUID("doc-" + seed))
+            .title(title)
+            .description("Mô tả chi tiết cho " + title + ". Quyển sách này rất hữu ích cho sinh viên.")
+            .uploader(user)
+            .organization(orgProfile)
+            .visibility(DocVisibility.PUBLIC)
+            .docType(docType)
+            .isPremium(true)
+            .price(100 + (seed * 50))
+            .thumbnailKey("thumbnail-" + (seed + 1) + ".png")
+            .fileKey("file-" + (seed + 1) + ".pdf")
+            .pageCount(20 + (seed * 10))
+            .status(DocStatus.ACTIVE)
+            .specialization(spec)
+            .summarizations(summarization)
+            .build();
 
     Document savedDoc = documentRepository.save(document);
 
+    // Gán tags
     Tag tag1 = tagRepository.findByCode(1L).orElse(null);
     Tag tag2 = tagRepository.findByCode(2L).orElse(null);
 
-    if (tag1 != null & tag2 != null) {
+    if (tag1 != null && tag2 != null) {
       var link1 = DocumentTagLink.builder().tag(tag1).document(savedDoc).build();
       var link2 = DocumentTagLink.builder().tag(tag2).document(savedDoc).build();
 
       documentTagLinkRepository.save(link1);
       documentTagLinkRepository.save(link2);
+    }
+
+    log.info("✅ Created document: " + savedDoc.getTitle());
+  }
+
+  /**
+   * Logic tạo lịch sử đọc cho user reader1
+   */
+  private void seedReadHistory() {
+    if (documentReadHistoryRepository.count() > 0) {
+      log.warn("History already exists → skip.");
+      return;
+    }
+
+    User reader = userRepository.findByEmail("reader1@gmail.com").orElse(null);
+    if (reader == null) return;
+
+    List<Document> documents = documentRepository.findAll();
+
+    for (int i = 0; i < documents.size(); i++) {
+      Document doc = documents.get(i);
+
+      DocumentReadHistory history = DocumentReadHistory.builder()
+              .id(SeedUtil.generateUUID("history-" + i))
+              .user(reader)
+              .document(doc)
+              // Có thể set createdAt nếu Entity cho phép để test sort history
+              // .createdAt(Instant.now().minusSeconds(i * 3600))
+              .build();
+
+      documentReadHistoryRepository.save(history);
+      log.info("\uD83D\uDCD6 Created history: User read " + doc.getTitle());
     }
   }
 }
